Fixes map overlap nav issue

--- a/client/stylesheets/header.import.styl
+++ b/client/stylesheets/header.import.styl
@@ -1,3 +1,6 @@
+header
+  position relative
+  z-index 5000
 .navbar
   @extend .dark-shadow
   margin-bottom 0
